--- a/index.kuttu.html
+++ b/index.kuttu.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>JK Organization</title>
-    <link rel="icon" type="image/x-icon" href="images/JK_logo.png">
+    <link rel="icon" type="image/x-icon" href="JK_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.kuttu.css">
 </head>
