--- a/index.kuttu.html
+++ b/index.kuttu.html
@@ -12,7 +12,7 @@
 
     <div id="popup-message" class="popup-message"></div>
     <div class="profile">
-        <img src="images/profile_pic_kuttu.png" alt="Profile Picture">
+        <img src="profile_pic_kuttu.png" alt="Profile Picture">
         <span class="profile-name">AYUSHMAN</span>
     </div>
     <div class="container">
